--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "npm-package-template",
   "version": "1.0.0",
-  "description": "template repository for npm package",
+  "description": "Env var validation library for TypeScript (or JS)",
   "main": "./dist/index.umd.min.js",
   "module": "./dist/index.es.js",
   "types": "./dist/index.d.ts",
@@ -15,7 +15,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ysuzuki19/npm-package-template.git"
+    "url": "git+https://github.com/ysuzuki19/enveror.git"
   },
   "keywords": [
     "typescript",
@@ -27,9 +27,9 @@
   "author": "ysuzuki19 (https://ysuzuki19.github.io/)",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/ysuzuki19/npm-package-template/issues"
+    "url": "https://github.com/ysuzuki19/enveror/issues"
   },
-  "homepage": "https://github.com/ysuzuki19/npm-package-template#readme",
+  "homepage": "https://github.com/ysuzuki19/enveror#readme",
   "devDependencies": {
     "@rollup/plugin-babel": "^5.3.0",
     "@rollup/plugin-typescript": "^8.3.0",
