--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "dist"
   ],
   "scripts": {
+    "start": "ts-node index.ts",
     "test": "jest",
     "build": "rollup -c",
     "prepublishOnly": "npm run build"
@@ -30,15 +31,27 @@
     "url": "https://github.com/ysuzuki19/enveror/issues"
   },
   "homepage": "https://github.com/ysuzuki19/enveror#readme",
+  "dependencies": {
+    "obstractor": "^1.0.4"
+  },
+  "eslintConfig": {
+    "extends": [
+      "@ysuzuki19"
+    ]
+  },
   "devDependencies": {
     "@rollup/plugin-babel": "^5.3.0",
     "@rollup/plugin-typescript": "^8.3.0",
     "@types/jest": "^27.4.0",
+    "@typescript-eslint/eslint-plugin": "^5.31.0",
+    "@ysuzuki19/eslint-config": "^1.2.0",
+    "eslint": "^8.20.0",
     "jest": "^27.5.1",
     "rollup": "^2.68.0",
     "rollup-plugin-dts": "^4.1.0",
     "rollup-plugin-terser": "^7.0.2",
     "ts-jest": "^27.1.3",
+    "ts-node": "^10.9.1",
     "typescript": "^4.5.5"
   }
 }
