--- a/.enveror
+++ b/.enveror
@@ -1,6 +1,7 @@
 STAGE = "dev" 
 CLOUD.API_KEY_ID = "hogehoge=hog"
 CLOUD.API_SECRET_KEY = "fug+;l[l;uw:er\-0-63-096z,nxvcafuga"
+CLOUD.STORAGE.IMAGES = "myimages"
 API.CORS_ORIGIN =["http://localhost:3000"]
 WORKER_COUNT =4
 TIMEOUT_SECONDS= 2.3
