--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "npm-package-template",
-  "version": "1.0.0",
-  "description": "Env var validation library for TypeScript (or JS)",
+  "name": "enveror",
+  "version": "0.0.0",
+  "description": "environment variables managing library for TypeScript (or JS)",
   "main": "./dist/index.umd.min.js",
   "module": "./dist/index.es.js",
   "types": "./dist/index.d.ts",
@@ -35,11 +35,6 @@
     "@ysuzuki19/match.ts": "^1.0.1",
     "obstractor": "^1.0.4"
   },
-  "eslintConfig": {
-    "extends": [
-      "@ysuzuki19"
-    ]
-  },
   "devDependencies": {
     "@rollup/plugin-babel": "^5.3.0",
     "@rollup/plugin-typescript": "^8.3.0",
@@ -54,5 +49,10 @@
     "ts-jest": "^27.1.3",
     "ts-node": "^10.9.1",
     "typescript": "^4.5.5"
+  },
+  "eslintConfig": {
+    "extends": [
+      "@ysuzuki19"
+    ]
   }
 }
