--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "enveror",
-  "version": "0.0.0",
+  "version": "1.0.0-alpha.0",
   "description": "environment variables managing library for TypeScript (or JS)",
   "main": "./dist/index.umd.min.js",
   "module": "./dist/index.es.js",
